apps/base/minecraft/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: 1-12-2-pack
  namespace: app-minecraft

spec:
  replicas: 1
  selector:
    matchLabels:
      app: 1-12-2-pack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: 1-12-2-pack
    spec:
      containers:
        - name: server
          image: ghcr.io/decentm/minecraft-servers:1-12-2-pack
          securityContext:
            capabilities:
              add:
                - CAP_NET_RAW
          imagePullPolicy: Always
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: world
              mountPath: /data/world
      volumes:
        - name: world
          persistentVolumeClaim:
            claimName: 1-12-2-world
